third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/with-pound.stderr
TOML parse error at line 1, column 5
  |
1 | [key#group]
  |     ^
invalid table header
expected `.`, `]`
